--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
   <head>
     <meta charset="utf-8">
     <title>element</title>
+    <meta name="viewport" content="width=device-width,inital-scale=1.0,maximum-scale=1.0,minimum-scale=1.0,user-scalable=no" />
+   	<link rel="stylesheet" type="text/css" href="static/css/reset.css" />
   </head>
   <body>
     <div id="app"></div>
